fix home tour text align

--- a/frontend/web/css/home-tour.css
+++ b/frontend/web/css/home-tour.css
@@ -104,11 +104,14 @@ and (-webkit-min-device-pixel-ratio: 2) {
     margin:0;
   }
   .row1-right,.row3-right,.row5-right,.row7-right {
+    padding-top:0px !important;
   }
 
   .row2-left, .row4-left, .row6-left {
     float:left;
+    padding-top:0px !important;
   }
+  
   /* text blocks */
   .row1-right,.row3-right,.row5-right,.row7-right,.row2-left, .row4-left, .row6-left  {
     margin:0px;
